--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.1",
+    "terser": "^5.31.0",
     "vite": "^5.2.8",
     "vite-plugin-svg-sprite": "^0.5.2"
   },
